<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_weight="100"
    tools:ignore="NestedWeights"
    tools:context="com.JNJABA.caloriecounter.HealthActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/tvDailyFoodTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/daily_dosage_text_string"
        android:layout_weight="5"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="80"
        android:orientation="vertical" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <LinearLayout
                android:id="@+id/llDailyNutrition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvDailyNutrition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/daily_nutrition_text_string"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/tvDailyNutritionHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/not_yet_recorded_hint_string"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

           <LinearLayout
               android:id="@+id/llDailyFoods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvDailyFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/daily_foods_text_string"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/tvDailyFoodHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/not_yet_recorded_hint_string"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvDailyActivityLevelString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_level_text_string"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tvDailyActivityLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/not_yet_recorded_hint_string"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</LinearLayout>